tests/paczka1/small_fuzzy/43029073.err
Error in line 1: h6RiyNw A705 21,8
Error in line 4: A472 A472 62,09
